Too wide events fixed.

--- a/time-writer-react/components/logging/_.css
+++ b/time-writer-react/components/logging/_.css
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
+	max-width: 400px;
 }
 
 .logs .log {
